2004-05-25 18:30 CET Patrik Torstensson <totte@hiddenpeaks.com>

	* configure.in: Check for trunc instead of truncl (HAVE_TRUNC)

2004-05-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile.am:
	* monowiz.win32.nsi: improved windows installer script.

2004-05-21  Raja R Harinath  <rharinath@novell.com>

	* README: Update to include instructions for the various new
	bootstrap-like targets.

2004-05-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (get-monolite-latest, monolite-bootstrap):
	New bootstrap targets to build from monolite.
	Based on idea from Jaroslaw Kowalski <jaak@zd.com.pl>.

2004-05-20  Raja R Harinath  <rharinath@novell.com>

	* configure.in (AC_OUTPUT): Add tools/Makefile and
	tools/locale-builder/Makefile.
	* Makefile.am (SUBDIRS): Remove tools.
	(DIST_SUBDIRS): Add 'tools'.
	(bootstrap): Rewrite so that we get two new targets.
	(faststrap): New two-stage build.
	(fasterstrap): New one-stage build.

2004-05-19  Jackson Harper  <jackson@ximain.com>

	* tools/
	* tools/Makefile.am: Add tools directory
	* tools/locale-builder: Add the locale-builder tool, this tool is
	not built by default as it is only needed by people that wish to
	moidify culture data.
	* Makefile.am: Add tools to build
	
Wed May 19 13:22:19 EDT 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: make MacOSX default to use the included libgc.

2004-05-18  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Get rid of -DMONO_USE_EXC_TABLES.

2004-05-19  Raja R Harinath  <rharinath@novell.com>

	* configure.in: Use proper autoconf idiom to pass additional
	arguments to libgc/configure.
	(PLATFORM_WIN32, NEED_LINK_UNLINK): Use three-argument AC_DEFINE.
	* acconfig.h: Update to reflect changes.

2004-05-17  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (tmpinst-dir): Creates _tmpinst tree if
	necessary. Move body ...
	(tmpinst-dir.stamp): ... here.
	(stage3): Don't remove _tmpinst tree.
	(bootstrap-clean, bootstrap-check): New rules.  They run the