@@ -1,3 +1,7 @@
+2004-05-25 Ben Maurer  <bmaurer@users.sourceforge.net>
+
+	* config.h.in: remove
+
 2004-05-25 18:30 CET Patrik Torstensson <totte@hiddenpeaks.com>
 
 	* configure.in: Check for trunc instead of truncl (HAVE_TRUNC)
